--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 
 <script src="source/max.js"></script>
 
+<script src="source/format.js"></script>
+
 <script src="tests/max.js"></script>
 <script src="tests/format.js"></script>
 
