--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width">
 	<title>Домашнее задание: вариант №1</title>
 	<link rel="stylesheet" href="https://code.jquery.com/qunit/qunit-2.4.0.css">
+
 	<script src="https://code.jquery.com/qunit/qunit-2.4.0.js"></script>
 </head>
 <body>
@@ -13,7 +14,7 @@
 <div id="qunit-fixture"></div>
 
 <script src="source/max.js"></script>
-
+<script src="source/zip.js"></script>
 <script src="tests/max.js"></script>
 <script src="tests/zip.js"></script>
 
