--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
 <div id="qunit-fixture"></div>
 
 <script src="source/max.js"></script>
+<script src="source/rle.js"></script>
 
-<script src="tests/max.js"></script>
-<script src="tests/rle.js"></script>
+<script src="tests/max.test.js"></script>
+<script src="tests/rle.test.js"></script>
 
 </body>
 </html>
