--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
-	<title>Домашнее задание: вариант №9</title>
+	<title>Домашнее задание: пример</title>
 	<link rel="stylesheet" href="https://code.jquery.com/qunit/qunit-2.4.0.css">
 	<script src="https://code.jquery.com/qunit/qunit-2.4.0.js"></script>
 </head>
@@ -12,9 +12,9 @@
 <div id="qunit"></div>
 <div id="qunit-fixture"></div>
 
-<script src="source/max.js"></script>
+<script src="source/anagram_sort.js"></script>
+<script src="source/anagram_map.js"></script>
 
-<script src="tests/max.js"></script>
 <script src="tests/anagram.js"></script>
 
 </body>
