--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
 <div id="qunit-fixture"></div>
 
 <script src="source/letters.js"></script>
+<script src="source/max.js"></script>
 
 <script src="tests/letters.js"></script>
-
+<script src="tests/max.js"></script>
 </body>
 </html>
