--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
 <script src="tests/max.js"></script>
 <script src="tests/inverse.js"></script>
+<script src="tests/inverse_my_tests.js"></script>
 
 </body>
 </html>
