--- a/index.html
+++ b/index.html
@@ -14,12 +14,11 @@
     <div id="qunit"></div>
     <div id="qunit-fixture"></div>
 
-    <!-- <script src="source/max.js"></script> -->
     <script src="source/minmax.js"></script>
 
     <script src="tests/max.js"></script>
+    <script src="tests/min.js"></script>
     <script src="tests/minmax.js"></script>
-
 </body>
 
 </html>
