--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
 <div id="qunit"></div>
 <div id="qunit-fixture"></div>
 
-<script src="source/anagram_sort.js"></script>
-<script src="source/anagram_map.js"></script>
+<script src="source/anagramSort.js"></script>
+<script src="source/anagramMap.js"></script>
 
-<script src="tests/anagram.js"></script>
+<script src="tests/anagramSortTest.js"></script>
+<script src="tests/anagramMapTest.js"></script>
 
 </body>
 </html>
