--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <div id="qunit"></div>
 <div id="qunit-fixture"></div>
 
-<script src="source/max.js"></script>
+<script src="source/sort.js"></script>
 
-<script src="tests/max.js"></script>
 <script src="tests/sort.js"></script>
+<script src="tests/myTestSort.js"></script>
 
 </body>
 </html>
